Ajout de nouvelles sections

--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,17 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+<!-- mon commentaire -->
 <div>
+<h1>Mon Titre de section</h1>
+<p>
+Description ajoute 
+</p>
+</div>
+
+<!-- mon commentaire -->
+<div>
+<h1>Mon Titre de section</h1>
 <p>
 Description ajoute
 </p>
