--- a/hello.html
+++ b/hello.html
@@ -25,11 +25,19 @@ Description ajoute
 </p>
 </div>
 
-<!-- mon commentaire -->
+<!-- mon profil -->
 <div>
-<h1>Mon Titre de section</h1>
+<h1>Mon Titre de profil</h1>
 <p>
-Description ajoute
+Description profil
+</p>
+</div>
+
+<!-- mon gist -->
+<div>
+<h1>Mon Gist</h1>
+<p>
+<script src="https://gist.github.com/xorenio/b82e12d706a4a6b8eb6e8869cd33a38f.js"></script>
 </p>
 </div>
 		
