#1 ajouts des images et modification de hello.html

--- a/hello.html
+++ b/hello.html
@@ -27,9 +27,9 @@ Description ajoute
 
 <!-- mon profil -->
 <div>
-<h1>Mon Titre de profil</h1>
+<h1>Mes recompenses</h1>
 <p>
-Description profil
+<img src="logoipsum-331.svg">
 </p>
 </div>
 
