duplication de l'image de hello.html

--- a/hello.html
+++ b/hello.html
@@ -29,7 +29,7 @@ Description ajoute
 <div>
 <h1>Mes recompenses</h1>
 <p>
-<img src="logoipsum-331.svg">
+<img src="logoipsum-331.svg"><img src="logoipsum-331.svg">
 </p>
 </div>
 
