ajout de mes commandes Git - git pull

--- a/hello.html
+++ b/hello.html
@@ -39,6 +39,9 @@ Description ajoute
 <p>
 <script src="https://gist.github.com/xorenio/b82e12d706a4a6b8eb6e8869cd33a38f.js"></script>
 </p>
+<h1>Mes commandes Git</h1>
+<p>git pull</p>
+</p>
 </div>
 		
 	
